[gd_scene load_steps=5 format=3 uid="uid://cnfku45f0iw0b"]

[ext_resource type="Script" path="res://scripts/main/MainScript.gd" id="1_eesk1"]
[ext_resource type="Script" path="res://scripts/resources/ResourcesContainer.gd" id="1_fmks5"]
[ext_resource type="Script" path="res://scripts/TimeContainer.gd" id="2_0nlaa"]
[ext_resource type="Script" path="res://scripts/population/PopulationContainer.gd" id="3_1t2kl"]

[node name="Node3D" type="Node3D"]

[node name="main" type="Node3D" parent="."]
script = ExtResource("1_eesk1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpperPanel" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer/UpperPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/UpperPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourcesContainer" type="VFlowContainer" parent="CanvasLayer/VBoxContainer/UpperPanel/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_fmks5")

[node name="PopulationContainer" type="VFlowContainer" parent="CanvasLayer/VBoxContainer/UpperPanel/Panel/HBoxContainer" node_paths=PackedStringArray("resource_container")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_1t2kl")
resource_container = NodePath("../ResourcesContainer")

[node name="TimeContainer" type="VFlowContainer" parent="CanvasLayer/VBoxContainer/UpperPanel/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_0nlaa")

[node name="MiddlePart" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="LeftPanel" type="Panel" parent="CanvasLayer/VBoxContainer/MiddlePart"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="BottomPanel" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer/BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMap" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
fov = 90.0
near = 0.001
